[package]
name = "nts-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec  = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
chrono = "0.4.22"
webpki = "0.21.0"
base64 = "0.13.1"
num-bigint = "0.4.3"
bit-vec = { version = "0.6", default-features = false}
httparse = { version = "1.3.2", default-features=false }
itertools = { version = "0.8" , default-features = false, features = []}
webpki-roots= "0.18.0"
serde_json = "1.0.87"
serde = "1.0.147"
serde_derive = "1.0.147"
rand = "0.8.5"
lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
derive_more = { version = "0.99.5" }
aes-siv = { path = "../nts-benchmark/core-primitives/aes-siv"}
byteorder = { version = "1" , default-features = false}
rustls      = "0.18.0"
log         = "0.4.8"
criterion = "0.4.0"

[[bench]]
name = "test_nts_bench"
harness = false
path = "../nts-benchmark/src/test_nts_benchmark.rs"